--- a/index.html
+++ b/index.html
@@ -576,8 +576,7 @@
                             </ul>
                         </div>
                         <div class="venture-actions">
-                            <a href="SuperCoffeeXP_Investor_Summary.pdf" class="venture-btn" target="_blank">📄 View Investor Summary</a>
-                            <a href="mailto:malikbanksnyc@gmail.com?subject=SuperCoffeeXP%20Pitch%20Deck%20Request&body=Hi%20Malik,%0D%0A%0D%0AI'd%20like%20to%20request%20the%20SuperCoffeeXP%20pitch%20deck.%0D%0A%0D%0AThank%20you!" class="venture-btn secondary">📊 Request Pitch Deck</a>
+                            <a href="mailto:malikbanksnyc@gmail.com?subject=SuperCoffeeXP%20Pitch%20Deck%20Request&body=Hi%20Malik,%0D%0A%0D%0AI'd%20like%20to%20request%20the%20SuperCoffeeXP%20pitch%20deck.%0D%0A%0D%0AThank%20you!" class="venture-btn">📊 Request Pitch Deck</a>
                         </div>
                     </div>
                 </div>
@@ -620,7 +619,4 @@
         </section>
 
         <footer>
-            <div class="footer-content">
-                <p class="footer-text">© 2026 Shabaka Malik Banks. Based in NYC.</p>
-                <div class="social-links">
-                    <a href="https://github.com/zero
+            <
